3 new fonts, hashtag functionality, overflow fix

--- a/styles/logogen.css
+++ b/styles/logogen.css
@@ -48,7 +48,12 @@ html, body {
   color: #ccc;
 }
 #nav ul {
-  margin: 80px 0;
+  overflow: auto;
+  position: absolute;
+  top: 100px;
+  left: 0;
+  height: 80%;
+  height: calc(100% - 100px);
 }
 label.disabled {
   opacity: 0.3;
